# bench-o-matic

./: Cargo.toml  README.md  bench_io.py
.claude/: settings.local.json
src/: cli.rs  main.rs  metrics.rs  output.rs  pattern.rs  report.rs  uring.rs  worker.rs
