[package]
name = "bench-o-matic"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bench_io"
path = "src/main.rs"

[dependencies]
clap       = { version = "4", features = ["derive"] }
rand       = "0.8"
serde_json = "1"
libc       = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.6"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
